--- a/cdi/templates/home/events_list_base.html
+++ b/cdi/templates/home/events_list_base.html
@@ -9,69 +9,24 @@
                         <ul class="nav nav-list">
                             <li class="{% active request "^/events/coming/" %}"><a href="{{ HOST }}/events/coming/">Coming Events</a></li>
                             <li class="{% active request "^/events/popular/" %}"><a href="{{ HOST }}/events/popular/">Popular events</a></li>
-                            <li class="nav-header">Get Events by:</li>
-                        </ul>
-
-                            <div id="sidebar-menu" class="accordion">
-                                <div class="accordian-group">
-                                    <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#sidebar-menu" href="#region">Region<i class="icon-chevron-down pull-right"></i></a>
-                                    </div>
-                                    <div id="region" class="accordion-body collapse">
-                                        <div class="accordion-inner">
-                                            <ul class="nav nav-list">
-                                                <li class="{% active request "^/events/region/1/$" %}"><a href="{{ HOST }}/events/region/1/">North</a></li>
-                                                <li class="{% active request "^/events/region/2/$" %}"><a href="{{ HOST }}/events/region/2/">East</a></li>
-                                                <li class="{% active request "^/events/region/3/$" %}"><a href="{{ HOST }}/events/region/3/">West</a></li>
-                                                <li class="{% active request "^/events/region/4/$" %}"><a href="{{ HOST }}/events/region/4/">Central</a></li>
-                                                <li class="{% active request "^/events/region/5/$" %}"><a href="{{ HOST }}/events/region/5/">South</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordian-group">
-                                    <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#sidebar-menu" href="#type">Type<i class="icon-chevron-down pull-right"></i></a>
-                                    </div>
-                                    <div id="type" class="accordion-body collapse">
-                                        <div class="accordion-inner">
-                                            <ul class="nav nav-list">
-                                                <li class="{% active request "^/events/type/1/$" %}"><a href="{{ HOST }}/events/type/1">Academics</a></li>
-                                                <li class="{% active request "^/events/type/2/$" %}"><a href="{{ HOST }}/events/type/2">Seminar/Workshop</a></li>
-                                                <li class="{% active request "^/events/type/3/$" %}"><a href="{{ HOST }}/events/type/3">Party</a></a></li>
-                                                <li class="{% active request "^/events/type/4/$" %}"><a href="{{ HOST }}/events/type/4">Festival</a></li>
-                                                <li class="{% active request "^/events/type/5/$" %}"><a href="{{ HOST }}/events/type/5">Conference</a></li>
-                                                <li class="{% active request "^/events/type/6/$" %}"><a href="{{ HOST }}/events/type/6">Competition</a></li>
-                                                <li class="{% active request "^/events/type/7/$" %}"><a href="{{ HOST }}/events/type/7">Other</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordian-group">
-                                    <div class="accordion-heading"><a class="accordion-toggle" data-toggle="collapse" data-parent="#sidebar-menu" href="#campus">Campus<i class="icon-chevron-down pull-right"></i></a>
-                                    </div>
-                                    <div id="campus" class="accordion-body collapse">
-                                        <div class="accordion-inner">
-                                            <ul class="nav nav-list">
-
-                                                {% for college in COLLEGES %}
-                                                <li class="{% active request "^/events/campus/{{ college.id }}/$" %}"><a href="{{ HOST }}/events/campus/{{ college.id }}/">{{ college.name }}</a></li>
-
-                                                {% endfor %}
-
-
-<!--
-                                                <li class="{% active request "^/events/campus/1/$" %}"><a href="{{ HOST }}/events/campus/1/">IIT Delhi</a></li>
-                                                <li class="{% active request "^/events/campus/2/$" %}"><a href="{{ HOST }}/events/campus/2/">IIT Bombay</a></li>
-                                                <li class="{% active request "^/events/campus/3/$" %}"><a href="{{ HOST }}/events/campus/3/">ASET, Gurgaon</a></li>
-                                                <li class="{% active request "^/events/campus/4/$" %}"><a href="{{ HOST }}/events/campus/4/">ABS, Gurgaon</a></li>
-                                                <li class="{% active request "^/events/campus/5/$" %}"><a href="{{ HOST }}/events/campus/5/">IIT Kanpur</a></li>
-                                                -->
-
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        <ul class="nav nav-list">
+                            <li class="nav-header">Get Events by Region:</li>
+                            <li class="{% active request "^/events/region/1/$" %}"><a href="{{ HOST }}/events/region/1/">North</a></li>
+                            <li class="{% active request "^/events/region/2/$" %}"><a href="{{ HOST }}/events/region/2/">East</a></li>
+                            <li class="{% active request "^/events/region/3/$" %}"><a href="{{ HOST }}/events/region/3/">West</a></li>
+                            <li class="{% active request "^/events/region/4/$" %}"><a href="{{ HOST }}/events/region/4/">Central</a></li>
+                            <li class="{% active request "^/events/region/5/$" %}"><a href="{{ HOST }}/events/region/5/">South</a></li>
+                            <li class="nav-header">Get Events by Type:</li>
+                            <li class="{% active request "^/events/type/1/$" %}"><a href="{{ HOST }}/events/type/1">Academics</a></li>
+                            <li class="{% active request "^/events/type/2/$" %}"><a href="{{ HOST }}/events/type/2">Seminar/Workshop</a></li>
+                            <li class="{% active request "^/events/type/3/$" %}"><a href="{{ HOST }}/events/type/3">Party</a></a></li>
+                            <li class="{% active request "^/events/type/4/$" %}"><a href="{{ HOST }}/events/type/4">Festival</a></li>
+                            <li class="{% active request "^/events/type/5/$" %}"><a href="{{ HOST }}/events/type/5">Conference</a></li>
+                            <li class="{% active request "^/events/type/6/$" %}"><a href="{{ HOST }}/events/type/6">Competition</a></li>
+                            <li class="{% active request "^/events/type/7/$" %}"><a href="{{ HOST }}/events/type/7">Other</a></li>
+                            <li class="nav-header">Get Events by Campus:</li>
+                            {% for college in COLLEGES %}
+                              <li class="{% active request "^/events/campus/{{ college.id }}/$" %}"><a href="{{ HOST }}/events/campus/{{ college.id }}/">{{ college.name }}</a></li>
+                            {% endfor %}
                             <li class="nav-header">Misc:</li>
                             <li class="{% active request "^/about/$" %}"><a href="{{ HOST }}/about/">About</a></li>
                             <li class="{% active request "^/team/" %}"><a href="{{ HOST }}/team/">Team</a></li>
@@ -79,21 +34,7 @@
                         </ul>
                     </div>
                     <hr />
-                    <div class="row" id="social">
-                        <div class="span3"><a href="http://facebook.com/collegedivein"><img src="{{ STATIC_URL }}img/facebook.png" alt="CDI facebook page" /> </a>
-                        <a href="http://blog.collegedive.in"><img src="{{ STATIC_URL }}img/blogger.png" alt="CDI blog" /> </a>
-                        <a href="http://twitter.com/codestersgroup"><img src="{{ STATIC_URL }}img/twitter.png" alt="CDI twitter" /> </a>
-                        <a href="{{ HOST }}"><img src="{{ STATIC_URL }}img/googleplus.png" alt="CDI google plus" /> </a>
-                        <a href="mailto:cdi@codesters.org"> <img src="{{ STATIC_URL }}img/mail.png" alt="CDI mail" /></a></div>
-                    </div>
-                    <hr />
-                    <!--
-                    <div class="row">
-                        <div class="span3"><a href="{{ HOST }}/team/" class="btn btn-link btn-large">Team</a>
-                        <a href="{{ HOST }}/about/" class="btn btn-link btn-large">About</a>
-                        <a href="{{ HOST }}/contact/" class="btn btn-link btn-large">Contact</a></div>
-                </div>
-                -->
+                    {% include "social.html" %}
                 </div>
                 <div class="span9">
                 {% block content %}{% endblock %}
