footer added in listings

--- a/cdi/templates/home/clubs/clubs_all.html
+++ b/cdi/templates/home/clubs/clubs_all.html
@@ -14,7 +14,7 @@
         <h2><a href="{{ HOST }}/clubs/{{ club.id }}">{{ club.name }}</a></h2><hr />
         <div class="row">
             <div class="span3">
-                <img class="pull-left img-polaroid" height="100" width="150" src="{{ club.thumbnail }}" alt="{{ club.name }}" />
+                <img class="pull-left img-polaroid" height="100px" width="150px" src="{{ club.thumbnail }}" alt="{{ club.name }}" />
             </div>
             <div class="span5">
             <ul class="unstyled">
