--- a/cdi/templates/home/colleges_list_base.html
+++ b/cdi/templates/home/colleges_list_base.html
@@ -36,3 +36,12 @@
                 </div>
             </div>
 {% endblock %}
+
+{% block footer %}
+<div class="footer">
+<div class="container">
+<p class="pull-right"><a href="#">Back to top</a></p>
+<p class="lead">Do you want your college to be listed here?</p>
+<p>Contact us at cdi at codesters.org and we will be happy to add it.</p>
+</div></div>
+{% endblock %}
