--- a/cdi/templates/home/notes_list_base.html
+++ b/cdi/templates/home/notes_list_base.html
@@ -28,3 +28,12 @@
                 </div>
             </div>
 {% endblock %}
+
+{% block footer %}
+<div class="footer">
+<div class="container">
+<p class="pull-right"><a href="#">Back to top</a></p>
+<p class="lead">Do you have notes that can help others?</p>
+<p>Contact us at cdi at codesters.org and we will be happy to add them.</p>
+</div></div>
+{% endblock %}
