--- a/cdi/assets/css/cdi.css
+++ b/cdi/assets/css/cdi.css
@@ -1,7 +1,7 @@
 .subhero-unit {
     min-height: 180px;
-    padding: 20px;
-    margin-bottom: 10px;
+    padding: 10px;
+    margin-bottom: 5px;
     background-color: #eee;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -33,14 +33,14 @@
     color: inherit;
 }
 
+
 #social img {
     height:40px;
     width:38px:
 }
 
 header {
-    color:#000 !important;
-    min-height:80px;
+    min-height:90px;
 }
 
 .fixed-bottom {
@@ -91,3 +91,27 @@ header {
     margin-top:20px;
     }
     
+.jumbotron {
+  position: relative;
+  padding: 10px 0;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
+  background: #0e2a95; /* Old browsers */
+  background: -moz-linear-gradient(45deg,  #0e2a95 0%, #5997eb 100%); /* FF3.6+ */
+  background: -webkit-linear-gradient(45deg,  #0e2a95 0%,#5997eb 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(45deg,  #0e2a95 0%,#5997eb 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(45deg,  #0e2a95 0%,#5997eb 100%); /* IE10+ */
+  background: linear-gradient(45deg,  #0e2a95 0%,#5997eb 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e2a95', endColorstr='#5997eb',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+     -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+          box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
+}
+
+.footer {
+  padding: 70px 0;
+  margin-top: 70px;
+  border-top: 1px solid #e5e5e5;
+  background-color: #f5f5f5;
+}    
