--- a/cdi/templates/home/clubs_list_base.html
+++ b/cdi/templates/home/clubs_list_base.html
@@ -41,3 +41,13 @@
                 </div>
             </div>
 {% endblock %}
+
+{% block footer %}
+<div class="footer">
+<div class="container">
+<p class="pull-right"><a href="#">Go to top</a></p>
+<p class="lead">Do you want your club to be listed here?</p>
+<p>Fill out <a href="{{ HOST }}/clubs/add/">this form</a> and we will be happy to add it.</p>
+</div>
+</div>
+{% endblock %}
