--- a/cdi/templates/home/events_list_base.html
+++ b/cdi/templates/home/events_list_base.html
@@ -41,3 +41,12 @@
                 </div>
             </div>
 {% endblock %}
+
+{% block footer %}
+<div class="footer">
+<div class="container">
+<p class="pull-right"><a href="#">Back to top</a></p>
+<p class="lead">Do you want your event to be listed here?</p>
+<p>Fill out <a href="{{ HOST }}/events/add/">this form</a> and we will be happy to add it.</p>
+</div></div>
+{% endblock %}
