--- a/cdi/assets/css/cdi.css
+++ b/cdi/assets/css/cdi.css
@@ -34,9 +34,8 @@
 }
 
 
-#social img {
-    height:40px;
-    width:38px:
+#social {
+    overflow: hidden;
 }
 
 header {
@@ -115,3 +114,13 @@ header {
   border-top: 1px solid #e5e5e5;
   background-color: #f5f5f5;
 }    
+
+@media (max-width: 767px) {
+    #social {
+    display:none;
+    }
+}
+
+header small {
+    color: #fff;
+}
