--- a/cdi/templates/base.html
+++ b/cdi/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ColleDiveIn or CDI is here to spice up your college life. Get information about all the events, cultural fests, workshops, seminars.">
     <meta name="author" content="Codesters">
-    
+    <link rel="icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon"/>
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
